styles/_helpSplash.scss
.appHelpModal {
  width: 80%;
  height: auto;
  max-height: 75%;
  margin: auto;
  max-width: 820px;
}
/* Important part */
.modal-dialog{
    overflow-y: initial !important
}
.helpModal-body{
    height: 50vh;
    max-height: 413px;
    overflow-y: auto;
    // background-image: url("../images/solar-app-transparent220x235.png");
    // background-repeat: no-repeat;
    // background-attachment: fixed;
    // background-position: center; 
}

.appHelp {
  // background-color:$overlay;
  color: $text-color;
}

.appHelpFooter {

}

.closeSplash {

}

.dontShowText {
  margin-right: 15px;
}

#colorRamp {
  text-align: left;
  padding: 10px;
}

.logo {
  max-height: 50px;
  max-width: 90%;
  display:inline-block;
}

.logo-doc {
  max-height: 65px;
  display:inline-block;
}

.pull-middle {
    // display: inline-block;
    // vertical-align: middle;
    // float: none;
}

// #colorRamp img {
//     width:auto;
//     display:relative;
//     top:-10px;
//     height:100%;
//     display:block;
//     margin:auto
// }

// #helpScreen{
//     // display:none;
//     position:absolute;
//     padding-top:5px;
//     padding-left:60px;
//     padding-right:20px;
//     padding-bottom:5px;
//     height:322px;
//     z-index:101;
//     font-family:TrebuchetMS,arial;
//     color:#fff;
//     border-top:3px solid #fff;
//     border-right:3px solid #fff;
//     border-bottom:3px solid #fff;
//     border-radius:0 40px 40px 0;
//     background:#474343;
//     line-height:30px
// }

#website {
  padding:60px;
//     position:relative;
//     z-index:55;
//     max-width:200px;
//     font-family:"TrebuchetMS";
//     float:right;
//     text-align:right;
//     vertical-align:bottom;
//     font-size:15px;
//     color:#fff
 }

